# moreHUDSE

./: .clang-format  .gitignore  .gitmodules  AHZACTIHelper.cpp  AHZACTIHelper.h  AHZActorInfo.cpp  AHZActorInfo.h  AHZArmorInfo.cpp  AHZArmorInfo.h  AHZConsole.cpp  AHZConsole.h  AHZExternalFormTable.cpp  AHZFormLookup.cpp  AHZFormLookup.h  AHZLUTObject.h  AHZPlayerInfo.cpp  AHZPlayerInfo.h  AHZPlayerInfoAddressInfo.txt  AHZScaleFormAddressInfo.txt  AHZScaleform.cpp  AHZScaleform.h  AHZScaleformHook.cpp  AHZScaleformHook.h  AHZUtilities.cpp  AHZUtilities.h  AHZUtility.cpp  AHZUtility.h  AHZVM.cpp  AHZVM.h  AHZWeaponInfo.cpp  AHZWeaponInfo.h  AHZmoreHUDPlugin.rc  ArchiveFiles.ps1  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  FoodLUT.cpp  FoodLUT.h  HUDObject.h  IngredientLUT.cpp  (+30 more)
AS2/: AHZhudInfo.fla  README.md  baseIcons.fla  enemyMagickaMeter.fla  enemyStaminaMeter.fla
AS2/BetaTesting/: moreHUD_interface_BetaTesting.7z
AS2/BetaTesting/Data/Interface/: ahzhudinfo.swf
AS2/BetaTesting/Data/Interface/moreHUD/: config.txt
AS2/BetaTesting/Data/Interface/translations/: ahzmorehud_german.txt  ahzmorehud_japanese.txt
AS2/ahz/scripts/widgets/: AHZHudInfoWidget.as
AS2/ahz/scripts/widgets/AHZCommon/: AHZConfigManager.as  AHZDefines.as  AHZIconContainer.as  AHZInventoryDefines.as  AHZLoadedMovieClip.as
AS2/ahz/scripts/widgets/AHZCommon/skse/plugins/: AHZmoreHUDPlugin.as
AS2/assets/: dbmDispShadow.emf  dbmFoundShadow.emf  dbmNewShadow.emf
AS2/scripts/widgets/: AHZHudInfoWidget.as
AS2/scripts/widgets/AHZCommon/: AHZBottomBar.as
BetaTesting/: AHZmoreHUD3_8_0a.7z  AHZmoreHUD3_8_0aesl.7z  AHZmoreHUD3_8_0b.7z  AHZmoreHUD3_8_0besl.7z  AHZmoreHUD3_8_0c.7z  AHZmoreHUD3_8_0cesl.7z  AHZmoreHUD3_8_0d.7z  AHZmoreHUD3_8_0desl.7z  AHZmoreHUD3_8_0e.7z  AHZmoreHUD3_8_0eesl.7z
Data/: AHZmoreHUD.esp  ahzmorehud.esl
Data/ConfigTesting/: ConfigTesting.7z
Data/ConfigTesting/Data/Interface/exported/moreHUD/: config.txt
Data/Interface/: ahzhudinfo.swf
Data/Interface/exported/: ahzhudinfo.swf
Data/Interface/exported/moreHUD/: baseIcons.swf  config.txt
Data/Interface/moreHUD/: config.txt
Data/Interface/translations/: ahzmorehud_czech.txt  ahzmorehud_english.txt  ahzmorehud_french.txt  ahzmorehud_german.txt  ahzmorehud_italian.txt  ahzmorehud_japanese.txt  ahzmorehud_polish.txt  ahzmorehud_russian.txt  ahzmorehud_spanish.txt
Data/Scripts/: ahzconfigmenu.pex  ahzmainquest.pex
Data/Source/Scripts/: ahzconfigmenu.psc  ahzmainquest.psc  ahzmaintenancealiasscript.psc
Scripts/: ArchiveFiles.ps1  ReleaseFiles.ps1  bsafilelist.txt  buildAll.ps1
Scripts/AE/: ArchiveFiles.ps1  ReleaseFiles.ps1  bsafilelist.txt
Scripts/SE/: ArchiveFiles.ps1  ReleaseFiles.ps1
Scripts/VR/: ArchiveFiles.ps1  ReleaseFiles.ps1  bsafilelist.txt  bsascript.txt
cmake/: CommonLibSSE-local.cmake  Version.h.in  headerlist.cmake  sourcelist.cmake  version.rc.in
contrib/Distribution/ESP/: AHZmoreHUD.esp
contrib/Distribution/PapyrusSources/: ahzmainquest.psc
include/: AHZActorInfo.h  AHZArmorInfo.h  AHZConsole.h  AHZExternalFormTable.h  AHZForEachScriptObjectFunctor.h  AHZFormLookup.h  AHZLUTObject.h  AHZPapyrusMoreHud.h  AHZPlayerInfo.h  AHZScaleform.h  AHZScaleformHook.h  AHZTarget.h  AHZUtilities.h  AHZVanillaFormTable.h  AHZWeaponInfo.h  ActorValueList.h  Events.h  HashUtil.h  IForEachScriptObjectFunctor.h  Offsets-AE.h  Offsets-SE.h  Offsets-VR.h  Offsets.h  PCH.h  Papyrus.h  Patches.h  Scaleform.h  version.h
moreHUD/: .gitignore  LICENSE  README.md  exports.def  moreHUD.vcxproj  moreHUD.vcxproj.filters  resource.h  version.rc
moreHUD/Scripts/: ArchiveFiles.ps1
moreHUD/include/: AHZActorInfo.h  AHZArmorInfo.h  AHZConsole.h  AHZExternalFormTable.h  AHZForEachScriptObjectFunctor.h  AHZFormLookup.h  AHZLUTObject.h  AHZPapyrusMoreHud.h  AHZPlayerInfo.h  AHZScaleform.h  AHZScaleformHook.h  AHZUtilities.h  AHZVanillaFormTable.h  AHZWeaponInfo.h  ActorValueList.h  Events.h  Offsets.h  PCH.h  Papyrus.h  Patches.h  PluginForm.h  Scaleform.h  moreHUDMenu.h  resource2.h  version.h
moreHUD/resources/: AHZActorInfoAddressInfo.txt
moreHUD/src/: AHZActorInfo.cpp  AHZArmorInfo.cpp  AHZConsole.cpp  AHZExternalFormTable.cpp  AHZForEachScriptObjectFunctor.cpp  AHZFormLookup.cpp  AHZLUTObject.cpp  AHZPapyrusMoreHud.cpp  AHZPlayerInfo.cpp  AHZScaleform.cpp  AHZScaleformHook.cpp  AHZUtilities.cpp  AHZVanillaFormTable.cpp  AHZWeaponInfo.cpp  ActorValueList.cpp  BirthSignMenu.cpp  Events.cpp  HUDObject.cpp  HashUtil.cpp  Inventory.cpp  LevelUpMenu.cpp  MeterMenu.cpp  Papyrus.cpp  Patches.cpp  Scaleform.cpp  SpellmakingMenu.cpp  StatsMenu.cpp  StatsMenuEx.cpp  TweenMenu.cpp  main.cpp  moreHUDMenu.cpp
moreHUD/src/CLIK/: Array.cpp  Button.cpp  CoreList.cpp  DropdownMenu.cpp  MovieClip.cpp  Object.cpp  ScrollingList.cpp  Slider.cpp  TextField.cpp  TextInput.cpp  UIComponent.cpp
moreHUD/swf/Meter/: Meter.as  Meter.fla
moreHUD/swf/SpellmakingMenu/: GlobalListener.as  RightClickList.as  RightClickListRenderer.as  SpellmakingMenu.fla
moreHUD/swf/StatsMenuEx/: FactionsList.as  PerkInfoList.as  PerksList.as  RootList.as  StatsList.as  StatsMenuEx.as  StatsMenuEx.fla  TextFieldContainer.as  UnlockButtonHolder.as
psc/Data/: AHZmoreHUD.esp  AHZmoreHUD.mhud
psc/Data/Source/Scripts/: ahzconfigmenu.psc  ahzmainquest.psc  ahzplayerloadgamealias.psc
resources/: AHZScaleformHookAddressInfo.txt
src/: AHZActorInfo.cpp  AHZArmorInfo.cpp  AHZConsole.cpp  AHZExternalFormTable.cpp  AHZForEachScriptObjectFunctor.cpp  AHZFormLookup.cpp  AHZLUTObject.cpp  AHZPapyrusMoreHud.cpp  AHZPlayerInfo.cpp  AHZScaleform.cpp  AHZScaleformHook.cpp  AHZTarget.cpp  AHZUtilities.cpp  AHZVanillaFormTable.cpp  AHZWeaponInfo.cpp  ActorValueList.cpp  Events.cpp  HashUtil.cpp  IForEachScriptObjectFunctor.cpp  Papyrus.cpp  Patches.cpp  Scaleform.cpp  main.cpp
